<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ThirdActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">


            <TextView
                android:id="@+id/teamA"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:textSize="40sp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="TeamA"/>

            <TextView
                android:id="@+id/scoreA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="65sp"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:text="0"
                tools:ignore="HardcodedText"/>

            <Button
                android:id="@+id/btn3A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:onClick="btnAdd3"
                android:text="@string/lable_add3" />

            <Button
                android:id="@+id/btn2A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:onClick="btnAdd2"
                android:text="@string/lable_add2" />

            <Button
                android:id="@+id/btn1A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:onClick="btnAdd1"
                android:text="@string/lable_add1" />
        </LinearLayout>

        <TextView
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/colorPrimary"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:id="@+id/teamB"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:textSize="40sp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="TeamB"/>

            <TextView
                android:id="@+id/scoreB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="65sp"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:text="0"
                tools:ignore="HardcodedText"/>

            <Button
                android:id="@+id/btn3B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:onClick="btnAdd3"
                android:text="@string/lable_add3" />

            <Button
                android:id="@+id/btn2B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:onClick="btnAdd2"
                android:text="@string/lable_add2" />

            <Button
                android:id="@+id/btn1B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:onClick="btnAdd1"
                android:text="@string/lable_add1" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:onClick="btnReset"
        android:text="@string/btn_reset" />
</RelativeLayout>